src/test/deca/context/invalid/created/binary_exp/op_comp/eq_boolean_null.deca
// Description :
//    test eq entre un boolean et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type boolean, null, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)


{
boolean a;
boolean c = a == null;
}
